@@ -24,6 +24,8 @@ Bug fixes:
 - #923: Local role blocking is propagated to children ; fixing this bug led
   to remove possibility to view inherited blocked roles.
 - #1069: Fixed moving of several items down.
+- #802: Use explicit try/except construct to catch query parsing errors in
+  search.py
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Small refactoring of folder_localrole_edit.py to move setting `reindex` out
